syntax = "proto3";

package record;

import "validate/validate.proto";
import "mtn/visibility.proto";
import "embedded.proto";

option go_package = 'mtechnavi/sharelib/protobuf/record';

message Record {
  string record_id = 6;

  string type_name = 1 [(validate.rules).string.min_len = 1];

  map<int32, Field> fields = 2;

  // write(encode) only
  repeated Index indexs = 7;

  // 共有情報
  sharelib.EmbeddedSharedProperties shared_properties = 8;

  int64 created_at = 3;

  int64 updated_at = 4;

  int64 deleted_at = 5;
}

message Field {
  // 元エンティティのフィールド名
  string name = 1;

  // 元エンティティのフィールドに格納されていた値を、JSON化した値
  bytes value = 2;

  mtn.VisibilityOptions visibility = 3;
}

message Index {
  // インデックス名
  string name = 1;

  // 元エンティティのフィールドに格納されていた値を、JSON化した値
  bytes value = 2;
}
